[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qaoa-qubo"
version = "0.0.1"
description = "QUBO to QAOA compiler with a Qiskit backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiskit",
    "numpy",
    "scipy",
    "networkx",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
